# reflexkv

./: .gitignore  pyproject.toml  reflexkv.md  summary.md
eval/backends/: __init__.py  base.py  semantiq_backend.py  vllm_backend.py
eval/bench/: __init__.py  longbench.py  reasoning.py  semantiq_prior.py
eval/config/: dataset2maxlen.json  dataset2metric.json  dataset2prompt.json  dataset2samples.json  reasoning_dataset2maxlen.json  reasoning_dataset2metric.json  reasoning_dataset2prompt.json  reasoning_dataset2samples.json
eval/utils/: __init__.py  eval_longbench.py  eval_reasoning.py  longbench.py  metrics.py  reasoning.py  semantiq_prior_calibration.py
gen_data/: build_paper_mixed_manifest.py  build_trace_driven_manifest.py  prepare_reasoning_datasets.py  prepare_ruler_datasets.py
gen_data/burstgpt_answerable_mix_n100_cap20/: burstgpt_n100_li40_lo30_cap20_seed0_manifest.jsonl  burstgpt_n100_li40_lo30_cap20_seed0_summary.json  burstgpt_n100_li40_lo30_cap20_seed0_trace_profile.jsonl
gen_data/burstgpt_answerable_mix_n32/: burstgpt_n32_li40_lo30_seed0_manifest.jsonl  burstgpt_n32_li40_lo30_seed0_summary.json  burstgpt_n32_li40_lo30_seed0_trace_profile.jsonl
gen_data/burstgpt_answerable_mix_n32_cap20/: ablation_commands.jsonl  burstgpt_n32_li40_lo30_cap20_seed0_manifest.jsonl  burstgpt_n32_li40_lo30_cap20_seed0_summary.json  burstgpt_n32_li40_lo30_cap20_seed0_trace_profile.jsonl
gen_data/paper_accuracy_n20_seed0_backpressure_smoke/: paper_accuracy_n20_seed0_backpressure_smoke_manifest.jsonl  paper_accuracy_n20_seed0_backpressure_smoke_summary.json  paper_accuracy_n20_seed0_backpressure_smoke_trace_profile.jsonl
gen_data/paper_accuracy_n500_seed0/: paper_accuracy_n500_seed0_summary.json  paper_accuracy_n500_seed0_trace_profile.jsonl
gen_data/paper_mixed_n100_noaime_seed0/: paper_mixed_n100_noaime_seed0_manifest.jsonl  paper_mixed_n100_noaime_seed0_summary.json  paper_mixed_n100_noaime_seed0_trace_profile.jsonl
scripts/: run_longbench.sh  run_reasoning.sh
scripts/accuracy/: generate_reflex_workloads.py  run_kv_accuracy.py  run_pd_serving_accuracy.py  run_pd_serving_mixed_accuracy.py  run_pd_serving_regression.py  run_reflex_ablation_matrix.py  summarize_kv_accuracy.py
scripts/profiling/: diagnose_reflex_blockers.py  run_fullkv_pressure.py  run_reflex_pd_1p1d.py  run_reflex_pd_pressure_sweep.py  summarize_fullkv_pressure.py  summarize_reflex_pd_pressure.py
tests/accuracy/: test_generate_reflex_workloads.py  test_kv_accuracy_scripts.py  test_pd_serving_accuracy.py  test_pd_serving_mixed_accuracy.py  test_pd_serving_regression.py  test_reflex_ablation_matrix.py
tests/gen_data/: test_build_paper_mixed_manifest.py  test_build_trace_driven_manifest.py  test_prepare_reasoning_datasets.py  test_prepare_ruler_datasets.py
tests/profiling/: reflex_cuda_test_utils.py  test_diagnose_reflex_blockers.py  test_int4_kv_cache.py  test_mooncake_proxy_state.py  test_p2p_kv_layout_adapter.py  test_precision_kv_chunks.py  test_precision_kv_controller.py  test_precision_kv_frontier.py  test_precision_kv_landing.py  test_precision_kv_p2.py  test_precision_kv_policy.py  test_precision_kv_refactor_boundaries.py  test_precision_kv_run_optimizer.py  test_reflex_cuda_test_utils.py  test_reflex_int4_attention_metadata.py  test_reflex_int4_block_table.py  test_reflex_int4_budget.py  test_reflex_int4_config.py  test_reflex_int4_direct_attention.py  test_reflex_int4_materialize.py  test_reflex_int4_pool.py  test_reflex_int4_scheduler.py  test_reflex_int4_trace.py  test_reflex_int4_triton_attn.py  test_reflex_int4_worker_block_table.py  test_reflex_int4_worker_control_step.py  test_reflex_int4_worker_state.py  test_reflex_mooncake_connector.py  test_reflex_pd_1p1d_runner.py  test_reflex_pd_pressure_sweep.py  (+3 more)
(+61 files in other folders)
