[build-system]
# Keep setuptools below 81 to match the bundled vLLM build constraints.
requires = [
    "setuptools==80.10.2",
    "wheel==0.46.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "semantiq"
version = "0.1.0"
description = "SemantiQ evaluation harness with a bundled vLLM integration."
readme = "notice.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fuzzywuzzy==0.18.0",
    "jieba==0.42.1",
    "numpy==2.2.6",
    "rouge==1.0.1",
    "torch==2.11.0",
    "vllm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eval*"]
exclude = ["tests*", "vllm*"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]
vllm-cuda = [
    "aiohttp==3.13.5",
    "anthropic==0.96.0",
    "av==17.0.0",
    "blake3==1.0.8",
    "cachetools==7.0.5",
    "cbor2==5.9.0",
    "cloudpickle==3.1.2",
    "compressed-tensors==0.15.0.1",
    "depyf==0.20.0",
    "diskcache==5.6.3",
    "einops==0.8.2",
    "fastapi[standard]==0.136.0",
    "fastsafetensors==0.2.2",
    "filelock==3.28.0",
    "flashinfer-cubin==0.6.7",
    "flashinfer-python==0.6.7",
    "gguf==0.18.0",
    "ijson==3.5.0",
    "lark==1.2.2",
    "llguidance==1.3.0",
    "lm-format-enforcer==0.11.3",
    "mcp==1.27.0",
    "mistral-common[image]==1.11.0",
    "model-hosting-container-standards==0.1.14",
    "msgspec==0.21.1",
    "ninja==1.13.0",
    "numba==0.61.2",
    "nvidia-cudnn-frontend==1.18.0",
    "nvidia-cutlass-dsl==4.4.2",
    "openai==2.32.0",
    "openai-harmony==0.0.8",
    "opencv-python-headless==4.13.0.92",
    "opentelemetry-api==1.41.0",
    "opentelemetry-exporter-otlp==1.41.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-semantic-conventions-ai==0.5.1",
    "outlines-core==0.2.11",
    "partial-json-parser==0.2.1.1.post7",
    "pillow==12.2.0",
    "prometheus-client==0.25.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "py-cpuinfo==9.0.0",
    "pybase64==1.4.3",
    "python-json-logger==4.1.0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "quack-kernels==0.3.10",
    "regex==2026.4.4",
    "requests==2.33.1",
    "sentencepiece==0.2.1",
    "setproctitle==1.3.7",
    "setuptools==80.10.2",
    "six==1.17.0",
    "soundfile==0.13.1",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "tqdm==4.67.3",
    "transformers==5.5.4",
    "typing-extensions==4.15.0",
    "watchfiles==1.1.1",
    "xgrammar==0.1.33",
]

[tool.uv.sources]
# Resolve vLLM from this repository's bundled source tree.
vllm = { path = "vllm", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "vllm"]

[tool.semantiq.local_packages]
vllm_source_path = "vllm"
vllm_source_version = "0.19.1rc1.dev391+g80b18230e"
vllm_installed_version_in_project_venv = "0.19.1rc1.dev391+g80b18230e.precompiled"

[tool.semantiq.conda_semantiq]
prefix = "/home/ytm/miniforge3/envs/semantiq"
python = "3.12.13"
packages = [
    "_openmp_mutex==4.5",
    "bzip2==1.0.8",
    "ca-certificates==2026.2.25",
    "capstone==4.0.2",
    "icu==78.3",
    "ld_impl_linux-64==2.45.1",
    "libexpat==2.7.5",
    "libffi==3.5.2",
    "libgcc==15.2.0",
    "libgcc-ng==15.2.0",
    "libgomp==15.2.0",
    "liblzma==5.8.3",
    "libnsl==2.0.1",
    "libsqlite==3.53.0",
    "libstdcxx==15.2.0",
    "libuuid==2.42",
    "libxcrypt==4.4.36",
    "libzlib==1.3.2",
    "ncurses==6.5",
    "openssl==3.6.2",
    "packaging==26.1",
    "pip==26.0.1",
    "python==3.12.13",
    "readline==8.3",
    "setuptools==82.0.1",
    "tk==8.6.13",
    "tzdata==2025c",
    "unicorn==2.1.3",
    "wheel==0.46.3",
    "zstd==1.5.7",
]
